New layout changes

--- a/about.css
+++ b/about.css
@@ -84,6 +84,8 @@ ul {
     padding-right: 15px;
 }
 
+
+
 .navbar {
     position: fixed;
     top: 0;
@@ -101,9 +103,11 @@ ul {
     justify-content: space-between;
 }
 
+
+
 .container .logo {
     padding-top: 30px;
-    max-width: 100px; /* Ensures the image does not exceed its container width */
+    max-width: 400px; /* Ensures the image does not exceed its container width */
     height: auto; /* Maintains the aspect ratio */
     width: auto;
 }
@@ -122,14 +126,13 @@ ul {
 }
 
 .nav-links li.active a {
-    box-shadow: 0 2px var(--c-brand);
+    box-shadow: 0 2px var(--c-body);
 }
 
 .nav-links li a {
     color: var(--c-dark);
     font-size: 13px;
     text-transform: uppercase;
-    font-size: 15px;
     letter-spacing: 1px;
 }
 
@@ -193,7 +196,7 @@ ul {
     display: block;
     width: 34px;
     height: 2px;
-    background-color: #fff;
+    background-color: var(--c-dark);
     margin: 8px auto;
     transition: all 0.4s ease;
 }
@@ -211,7 +214,7 @@ ul {
 }
 
 .scrolled .brand {
-    color: var(--c-body);
+    color: var(--c-dark);
 }
 
 .scrolled .nav-links li a {
@@ -247,7 +250,7 @@ ul {
         }
 
         .container .logo {
-            max-width: 60px;
+            max-width: 150px;
         }
     }
 
@@ -346,8 +349,21 @@ ul {
     text-align: justify;
 }
 
-.content .article p a {
-    font-size: 20px;
+.content .article .more-content {
+    display: none;
+}
+
+
+.content .article .read-more {
+    cursor: pointer;
+    color: var(--c-brand); 
+    text-decoration: underline;
+}
+
+
+.content .article a {
+    display: inline-block;
+    color: var(--c-brand);
     text-decoration: underline;
 }
 
@@ -362,6 +378,7 @@ ul {
     border-radius: 25px;
     color: #fff;
     letter-spacing: 1.5px;
+    text-decoration: none;
 
 }
 
@@ -941,6 +958,32 @@ ul {
         text-align: start;
     }
 }
+
+.whatsapp_float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #128c7e;
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 1000;
+}
+
+.whatsapp-icon {
+    margin-top: 16px;
+}
+
+.whatsapp_float:hover {
+    background-color: #128c7e;
+    color: #FFF;
+    text-decoration: none;
+}
+
 
 
 
