--- a/contact.css
+++ b/contact.css
@@ -229,3 +229,35 @@ button:hover {
     }
     
 }
+
+.whatsapp_container {
+    position: relative;
+}
+
+.whatsapp_float {
+    position: fixed;
+    width: 45px; 
+    height: 45px; 
+    bottom: 20px; 
+    right: 20px; 
+    background-color: #25d366;
+    color: #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px; 
+    z-index: 1000;
+}
+
+.whatsapp-icon {
+    font-size: 20px; 
+    color: #fff;
+}
+
+.whatsapp_float:hover {
+    background-color: #128c7e;
+    color: #FFF;
+    text-decoration: none;
+}
+
