--- a/about.css
+++ b/about.css
@@ -374,7 +374,7 @@ ul {
 
 .content .article .button a {
     padding: 8px 25px;
-    background-color: var(--c-body);
+    background-color: cadetblue;
     border-radius: 25px;
     color: #fff;
     letter-spacing: 1.5px;
@@ -618,6 +618,17 @@ ul {
     cursor: pointer;
 }
 
+
+.service_content p {
+    color: var(--c-body);
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+.service_content p a {
+    text-decoration: underline;
+    color: cadetblue;
+}
 @media (max-width: 1024px) {
     .service_con {
         flex-direction: column;
@@ -666,6 +677,10 @@ ul {
 
     .service_list {
         padding-left: 10px;
+    }
+
+    .service_content p {
+        font-size: 18px;
     }
 }
 
@@ -961,15 +976,17 @@ ul {
 
 .whatsapp_float {
     position: fixed;
-    width: 60px;
-    height: 60px;
-    bottom: 40px;
-    right: 40px;
-    background-color: #128c7e;
-    color: #fff;
-    border-radius: 50px;
-    text-align: center;
-    font-size: 30px;
+    width: 45px; 
+    height: 45px; 
+    bottom: 20px; 
+    right: 20px; 
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px; 
     box-shadow: 2px 2px 3px #999;
     z-index: 1000;
 }
