--- a/about.css
+++ b/about.css
@@ -732,6 +732,102 @@ ul {
     text-decoration: underline;
     color: cadetblue;
 }
+
+
+/*request service button*/
+
+
+
+#show-service-link {
+    display: inline-block;
+    color: var(--c-brand);
+    text-decoration: underline;
+}
+
+#service-form {
+    display: none; 
+    position: relative; 
+    top: 100%; 
+    left: 0;
+    background: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    width: 300px;
+    z-index: 1000;
+    box-sizing: border-box;
+    overflow: auto;
+    margin-top: 10px; 
+}
+
+/* Close Button Style */
+#close-service-form {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: cadetblue;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+}
+#close-service-form:hover {
+    background-color: var(--c-brand);
+}
+
+/* Service Form Styles */
+#service-form h2 {
+    color: var(--c-brand);
+    margin-top: 0;
+    font-size: 25px;
+    text-align: center;
+}
+#service-form .form-group {
+    margin-bottom: 15px;
+}
+
+#service-form .form-group .serv {
+    color: cadetblue;
+    font-size: 20px;
+    font-weight: 400;
+}
+#service-form .form-group label {
+    display: block;
+    margin-bottom: 5px;
+    color: #555;
+}
+#service-form .form-group select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+#service-form .form-group button {
+    background-color: cadetblue;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 100%;
+}
+#service-form .form-group button:hover {
+    background-color: var(--c-brand);
+}
+
+/* Responsive Design */
+@media (max-width: 600px) {
+    #service-form {
+        width: 90%;
+    }
+}
+
+/*service media query*/
+
 @media (max-width: 1024px) {
     .service_con {
         flex-direction: column;
