--- a/about.css
+++ b/about.css
@@ -711,7 +711,7 @@ ul {
 }
 /* Show the list when active */
 .service_list.active {
-    max-height: 300px; /* Adjust based on content height */
+    max-height: 300px; 
     padding-top: 10px;
     padding-bottom: 10px;
     transition: max-height 0.5s ease-in, padding 0.5s ease-in;
