--- a/contact.css
+++ b/contact.css
@@ -157,49 +157,54 @@ ul {
 }
 
 .contact-form h2 {
-    margin-bottom: 30px;
+    font-size: 2em;
+    margin-bottom: 20px;
     color: cadetblue;
 }
 
-.form-group {
-    position: relative;
-    margin-bottom: 30px;
+.contact-form form {
+    display: flex;
+    flex-direction: column;
 }
 
-.form-group input, .form-group textarea {
-    width: 100%;
-    padding: 10px;
+.contact-form label {
+    color: #333;
+    font-size: 20px;
+}
+
+.contact-form input,
+.contact-form textarea {
+    padding: 15px;
+    margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    outline: none;
-    font-size: 16px;
-    transition: all 0.3s ease;
+    font-size: 1em;
+    width: 100%;
+    box-sizing: border-box;
 }
 
-.form-group label {
-    position: absolute;
-    left: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    background: #fff;
-    padding: 0 5px;
-    color: #999;
-    pointer-events: none;
-    transition: all 0.3s ease;
+.contact-form button {
+    padding: 15px;
+    background-color: cadetblue;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s ease;
 }
 
-.form-group .message {
+.contact-form button:hover {
+    background-color: var(--c-brand);
+}
+
+.contact-form .message {
     color: var(--c-body);
 }
 
-.form-group input:focus + label,
-.form-group input:not(:placeholder-shown) + label,
-.form-group textarea:focus + label,
-.form-group textarea:not(:placeholder-shown) + label {
-    top: -10px;
-    left: 5px;
-    color: #333;
-    font-size: 12px;
+#status-message {
+    margin-top: 10px;
+    font-size: 14px;
 }
 
 button {
